--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: lightblue;
+  background-color: black;
 }
 
 h1 {
@@ -7,5 +7,15 @@ h1 {
 }
 
 div {
-  background-color: lightblue;
+  background-color: black;
+}
+.center image {
+  display: centre;
+  width: 100%
+  margin-right:300px
+  margin-left:300px
+}
+image {
+  background-position: right;
+  background-size: cover;
 }
